# unisonht

./: .eslintignore  .eslintrc  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Cargo.toml  LICENSE.txt  README.md  config.example.yaml  deploy-to-pi.sh  index.ts  lircd.conf  log4j-udp-server.sh  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  sample.config.json  test.ts  tivo.conf  tsconfig.json  tslint.json  tsoa.json  typings.json  unisonht.d.ts  update-pi
client-api/: pom.xml
command-line/: pom.xml
config/: config.json  help-input.xcf  log4j.xml  tivo.conf
core/: pom.xml
docs/: nvme.md
lib/: Device.ts  GlobalMode.ts  Input.ts  Log.ts  Mode.ts  Plugin.ts  PromiseResponder.ts  TemporaryGlobalMode.ts  UnisonHT.ts  UnisonHTResponse.ts  WebImageMapInput.ejs  WebImageMapInput.ts
pi-ir/: raspberrypi-setup.md
plugins/: pom.xml
public/: angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.json
raspberry-pi-hat/: .gitignore  drawing_sheet.kicad_wks  fp-info-cache  fp-lib-table  raspberry-pi-hat.gvp  raspberry-pi-hat.kicad_pcb  raspberry-pi-hat.kicad_prl  raspberry-pi-hat.kicad_pro  raspberry-pi-hat.kicad_sch  raspberry-pi-hat.kicad_sym  sym-lib-table  unisonht.kicad_prl  unisonht.kicad_pro  unisonht.kicad_sch
scripts/: install-service.sh  raspberry-pi-adc-setup.sh  raspberry-pi-dev-setup.sh  raspberry-pi-ir-setup.sh  raspberry-pi-lirc-setup.sh  raspberry-pi-read-only.sh  raspberry-pi-setup.sh  start-dev.sh
src/: ButtonMap.ts  ButtonNotFoundError.ts  DeviceStatus.ts  Method.ts  NotFoundError.ts  RouteHandlerRequest.ts  (+22 more)
(+358 files in other folders)
