[package]
name = "unisonht"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
circular-buffer = "0.1.7"
env_logger = "0.11.3"
local-ip-address = "0.6.1"
log = {version = "0.4.21", features = ["std"]}
nix = {version = "0.28.0", features = ["ioctl", "fs"]}
num-derive = "0.4.2"
num-traits = "0.2.19"
rppal = "0.18.0"
salvo = "0.67.2"
thiserror = "1.0.61"
tokio = {version="1.37.0",features = ["macros"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
