[package]
name = "unisonht"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
circular-buffer = "0.1.7"
env_logger = "0.11.3"
local-ip-address = "0.6.1"
log = {version = "0.4.21", features = ["std"]}
nix = {version = "0.28.0", features = ["ioctl", "fs"]}
num-derive = "0.4.2"
num-traits = "0.2.19"
rppal = "0.18.0"
server_nano = "0.2.1"
thiserror = "1.0.61"
